# bbkar

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.clinerules/: cline-overview.md
.github/workflows/: ci.yml  release.yml
doc/: design-code.md  design-send-retention.md  dev.md  milestones.md  terms-config.md
examples/: full.toml  gcs.toml  local.toml
src/: archive.rs  archive_executor.rs  config.rs  error.rs  executor.rs  ideapad.rs  lib.rs  main.rs  snapshot.rs  snapshot_executor.rs  types.rs
src/cli/: cli.rs  dryrun.rs  ls.rs  mod.rs  restore.rs  run.rs  status.rs
src/model/: config.rs  dest.rs  error.rs  mod.rs  plan.rs  policy.rs  source.rs
src/service/: mod.rs
src/service/executor/: btrfs_send.rs  compress.rs  impl.rs  inspect_dest.rs  inspect_source.rs  measure.rs  mod.rs  opendal.rs  read_dest.rs  sudo.rs  write_dest.rs
src/service/planner/: mod.rs  prune.rs  restore.rs  send.rs  time.rs
src/utils/: duration.rs  format.rs  logging.rs  mod.rs  try-opendal.rs  wildcard.rs
tests/: test_dryrun.rs  test_ls.rs  test_main.rs  test_restore.rs  test_run.rs  test_status.rs
tests/common/: mod.rs
