[package]
name = "bbkar"
version = "0.0.9"
edition = "2024"

[dependencies]
atty = "0.2"
clap = { version = "4.5.59", features = ["derive"] }
libc = "0.2"
opendal = {version="0.55.0", features = ["blocking", "services-fs", "services-gcs", "services-s3"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"
subprocess = "1.0.0"
tokio = { version = "1.49", features = ["rt", "rt-multi-thread"] }
toml = "1.0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3.25.0"
